# TravelMail

./: .gitignore  README.md  currency.py  currency_visualization.py  db.py  flight.py  main.py  pyproject.toml  send_mail.py  update_currency.py
airline-automail/: flight.py
