[tool.poetry]
name = "airline-automail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "airline_automail"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.1"
pandas = "^1.5.1"
selenium = "^4.5.0"
bs4 = "^0.0.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
