[tool.poetry]
name = "travelmail"
version = "0.1.0"
description = ""
authors = ["paulyoon28 <ekdmbzzang@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.5.0"
bs4 = "^0.0.1"
requests = "^2.28.1"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
